[B]Version 2.5.3[/B]

- added Hulu Plus filtering for non Plus Members

[B]Version 2.5.2[/B]

- added fanart to non show listings

[B]Version 2.5.1[/B]

- change default icon to hulu for any listing without one. 

[B]Version 2.5.0[/B]

- preview release of Hulu Plus support
